@@ -17,7 +17,6 @@
 
 package net.elytrium.limboapi.server;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.mojang.brigadier.tree.RootCommandNode;
 import com.velocitypowered.api.command.Command;
@@ -57,21 +56,18 @@ import com.velocitypowered.proxy.protocol.packet.config.TagsUpdatePacket;
 import com.velocitypowered.proxy.protocol.packet.title.GenericTitlePacket;
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.Unpooled;
-import io.netty.channel.ChannelHandler;
 import io.netty.channel.ChannelOutboundHandlerAdapter;
 import io.netty.channel.ChannelPipeline;
 import io.netty.handler.timeout.ReadTimeoutHandler;
-import it.unimi.dsi.fastutil.Pair;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -81,9 +77,7 @@ import java.util.UUID;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.concurrent.atomic.LongAdder;
-import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Supplier;
 import net.elytrium.commons.utils.reflection.ReflectionException;
@@ -92,25 +86,25 @@ import net.elytrium.limboapi.LimboAPI;
 import net.elytrium.limboapi.Settings;
 import net.elytrium.limboapi.api.Limbo;
 import net.elytrium.limboapi.api.LimboSessionHandler;
-import net.elytrium.limboapi.api.chunk.Dimension;
-import net.elytrium.limboapi.api.chunk.VirtualChunk;
-import net.elytrium.limboapi.api.chunk.VirtualWorld;
-import net.elytrium.limboapi.api.command.LimboCommandMeta;
-import net.elytrium.limboapi.api.player.GameMode;
+import net.elytrium.limboapi.api.world.chunk.Dimension;
+import net.elytrium.limboapi.api.world.chunk.VirtualChunk;
+import net.elytrium.limboapi.api.world.VirtualWorld;
+import net.elytrium.limboapi.api.world.player.GameMode;
 import net.elytrium.limboapi.api.protocol.PacketDirection;
 import net.elytrium.limboapi.api.protocol.PreparedPacket;
-import net.elytrium.limboapi.api.protocol.packets.PacketMapping;
+import net.elytrium.limboapi.api.protocol.PacketMapping;
 import net.elytrium.limboapi.injection.login.confirmation.LoginConfirmHandler;
 import net.elytrium.limboapi.injection.packet.MinecraftLimitedCompressDecoder;
-import net.elytrium.limboapi.material.Biome;
+import net.elytrium.limboapi.server.world.Biome;
 import net.elytrium.limboapi.protocol.LimboProtocol;
-import net.elytrium.limboapi.protocol.packets.s2c.ChangeGameStatePacket;
-import net.elytrium.limboapi.protocol.packets.s2c.ChunkDataPacket;
+import net.elytrium.limboapi.protocol.packets.s2c.GameEventPacket;
 import net.elytrium.limboapi.protocol.packets.s2c.DefaultSpawnPositionPacket;
-import net.elytrium.limboapi.protocol.packets.s2c.PositionRotationPacket;
-import net.elytrium.limboapi.protocol.packets.s2c.TimeUpdatePacket;
-import net.elytrium.limboapi.protocol.packets.s2c.UpdateViewPositionPacket;
+import net.elytrium.limboapi.protocol.packets.s2c.PlayerPositionPacket;
+import net.elytrium.limboapi.protocol.packets.s2c.SetTimePacket;
+import net.elytrium.limboapi.protocol.packets.s2c.SetChunkCacheCenterPacket;
+import net.elytrium.limboapi.protocol.util.LimboProtocolUtils;
 import net.elytrium.limboapi.server.world.SimpleTagManager;
+import net.elytrium.limboapi.utils.Reflection;
 import net.kyori.adventure.nbt.BinaryTag;
 import net.kyori.adventure.nbt.BinaryTagIO;
 import net.kyori.adventure.nbt.BinaryTagTypes;
@@ -121,18 +115,18 @@ import net.kyori.adventure.text.Component;
 
 public class LimboImpl implements Limbo {
 
+  private static final MethodHandle GRACEFUL_DISCONNECT_SETTER = Reflection.findSetter(VelocityServerConnection.class, "gracefulDisconnect", boolean.class);
+  private static final MethodHandle PARTIAL_HASHED_SEED_SETTER = Reflection.findSetter(JoinGamePacket.class, "partialHashedSeed", long.class);
+  private static final MethodHandle LEVEL_NAMES_SETTER = Reflection.findSetter(JoinGamePacket.class, "levelNames", ImmutableSet.class);
+  private static final MethodHandle REGISTRY_SETTER = Reflection.findSetter(JoinGamePacket.class, "registry", CompoundBinaryTag.class);
+  private static final MethodHandle CURRENT_DIMENSION_DATA_SETTER = Reflection.findSetter(JoinGamePacket.class, "currentDimensionData", CompoundBinaryTag.class);
+  private static final MethodHandle ROOT_NODE_SETTER = Reflection.findSetter(AvailableCommandsPacket.class, "rootNode", RootCommandNode.class);
+
   private static final ImmutableSet<String> LEVELS = ImmutableSet.of(
       Dimension.OVERWORLD.getKey(),
       Dimension.NETHER.getKey(),
       Dimension.THE_END.getKey()
   );
-
-  private static final MethodHandle PARTIAL_HASHED_SEED_FIELD;
-  private static final MethodHandle CURRENT_DIMENSION_DATA_FIELD;
-  private static final MethodHandle ROOT_NODE_FIELD;
-  private static final MethodHandle GRACEFUL_DISCONNECT_FIELD;
-  private static final MethodHandle REGISTRY_FIELD;
-  private static final MethodHandle LEVEL_NAMES_FIELDS;
 
   private static final CompoundBinaryTag CHAT_TYPE_119;
   private static final CompoundBinaryTag CHAT_TYPE_1191;
@@ -140,23 +134,20 @@ public class LimboImpl implements Limbo {
   private static final CompoundBinaryTag DAMAGE_TYPE_120;
 
   private final Map<Class<? extends LimboSessionHandler>, PreparedPacket> brandMessages = new HashMap<>(2);
-  private final LimboAPI plugin;
-  private final VirtualWorld world;
+  private final List<PreparedPacket> queuedToRelease = new ArrayList<>();
 
   private final LongAdder currentOnline = new LongAdder();
+
   private final RootCommandNode<CommandSource> commandNode = new RootCommandNode<>();
-  private final ReadWriteLock lock = new ReentrantReadWriteLock();
-  private final List<PreparedPacket> queuedToRelease = new ArrayList<>();
-  private final List<CommandRegistrar<?>> registrars = ImmutableList.of(
-      new BrigadierCommandRegistrar(this.commandNode, this.lock.writeLock()),
-      new SimpleCommandRegistrar(this.commandNode, this.lock.writeLock()),
-      new RawCommandRegistrar(this.commandNode, this.lock.writeLock())
-  );
+  private final List<CommandRegistrar<?>> registrars;
+
+  private final LimboAPI plugin;
+  private final VirtualWorld world;
 
   private String limboName;
   private Integer readTimeout;
   private Long worldTicks;
-  private short gameMode = GameMode.ADVENTURE.getID();
+  private short gameMode = GameMode.ADVENTURE.getId();
   private Integer maxSuppressPacketLength;
 
   private PreparedPacket joinPackets;
@@ -166,24 +157,28 @@ public class LimboImpl implements Limbo {
   private PreparedPacket firstChunks;
   private List<PreparedPacket> delayedChunks;
   private PreparedPacket respawnPackets;
-  protected PreparedPacket configTransitionPackets;
-  protected PreparedPacket configPackets;
-  protected StateRegistry localStateRegistry;
+  private PreparedPacket configTransitionPackets;
+  private PreparedPacket configPackets;
+  private StateRegistry localStateRegistry = LimboProtocol.getLimboStateRegistry();
   private boolean shouldRespawn = true;
   private boolean shouldRejoin = true;
   private boolean shouldUpdateTags = true;
   private boolean reducedDebugInfo = Settings.IMP.MAIN.REDUCED_DEBUG_INFO;
   private int viewDistance = Settings.IMP.MAIN.VIEW_DISTANCE;
   private int simulationDistance = Settings.IMP.MAIN.SIMULATION_DISTANCE;
-  private volatile boolean built = true;
+  private volatile boolean built = false;
   private boolean disposeScheduled = false;
 
   public LimboImpl(LimboAPI plugin, VirtualWorld world) {
+    var lock = new ReentrantReadWriteLock();
+    this.registrars = List.of(
+        new BrigadierCommandRegistrar(this.commandNode, lock.writeLock()),
+        new SimpleCommandRegistrar(this.commandNode, lock.writeLock()),
+        new RawCommandRegistrar(this.commandNode, lock.writeLock())
+    );
+
     this.plugin = plugin;
     this.world = world;
-    this.localStateRegistry = LimboProtocol.getLimboStateRegistry();
-
-    this.refresh();
   }
 
   protected void refresh() {
@@ -211,30 +206,30 @@ public class LimboImpl implements Limbo {
         .prepare(joinGame1212, ProtocolVersion.MINECRAFT_1_21_2);
 
     PreparedPacket fastRejoinPackets = this.plugin.createPreparedPacket();
-    this.createFastClientServerSwitch(legacyJoinGame, ProtocolVersion.MINECRAFT_1_7_2)
+    LimboImpl.createFastClientServerSwitch(legacyJoinGame, ProtocolVersion.MINIMUM_VERSION)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINIMUM_VERSION, ProtocolVersion.MINECRAFT_1_15_2));
-    this.createFastClientServerSwitch(joinGame, ProtocolVersion.MINECRAFT_1_16)
+    LimboImpl.createFastClientServerSwitch(joinGame, ProtocolVersion.MINECRAFT_1_16)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_16, ProtocolVersion.MINECRAFT_1_16_1));
-    this.createFastClientServerSwitch(joinGame1162, ProtocolVersion.MINECRAFT_1_16_2)
+    LimboImpl.createFastClientServerSwitch(joinGame1162, ProtocolVersion.MINECRAFT_1_16_2)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_16_2, ProtocolVersion.MINECRAFT_1_18));
-    this.createFastClientServerSwitch(joinGame1182, ProtocolVersion.MINECRAFT_1_18_2)
+    LimboImpl.createFastClientServerSwitch(joinGame1182, ProtocolVersion.MINECRAFT_1_18_2)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_18_2, ProtocolVersion.MINECRAFT_1_18_2));
-    this.createFastClientServerSwitch(joinGame119, ProtocolVersion.MINECRAFT_1_19)
+    LimboImpl.createFastClientServerSwitch(joinGame119, ProtocolVersion.MINECRAFT_1_19)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_19, ProtocolVersion.MINECRAFT_1_19));
-    this.createFastClientServerSwitch(joinGame1191, ProtocolVersion.MINECRAFT_1_19_1)
+    LimboImpl.createFastClientServerSwitch(joinGame1191, ProtocolVersion.MINECRAFT_1_19_1)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_19_1, ProtocolVersion.MINECRAFT_1_19_3));
-    this.createFastClientServerSwitch(joinGame1194, ProtocolVersion.MINECRAFT_1_19_4)
+    LimboImpl.createFastClientServerSwitch(joinGame1194, ProtocolVersion.MINECRAFT_1_19_4)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_19_4, ProtocolVersion.MINECRAFT_1_19_4));
-    this.createFastClientServerSwitch(joinGame120, ProtocolVersion.MINECRAFT_1_20)
+    LimboImpl.createFastClientServerSwitch(joinGame120, ProtocolVersion.MINECRAFT_1_20)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_20, ProtocolVersion.MINECRAFT_1_20_5));
-    this.createFastClientServerSwitch(joinGame121, ProtocolVersion.MINECRAFT_1_21)
+    LimboImpl.createFastClientServerSwitch(joinGame121, ProtocolVersion.MINECRAFT_1_21)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_21, ProtocolVersion.MINECRAFT_1_21));
-    this.createFastClientServerSwitch(joinGame1212, ProtocolVersion.MINECRAFT_1_21_2)
+    LimboImpl.createFastClientServerSwitch(joinGame1212, ProtocolVersion.MINECRAFT_1_21_2)
         .forEach(minecraftPacket -> fastRejoinPackets.prepare(minecraftPacket, ProtocolVersion.MINECRAFT_1_21_2));
 
     this.joinPackets = this.addPostJoin(joinPackets);
     this.fastRejoinPackets = this.addPostJoin(fastRejoinPackets);
-    this.safeRejoinPackets = this.addPostJoin(this.plugin.createPreparedPacket().prepare(this.createSafeClientServerSwitch(legacyJoinGame)));
+    this.safeRejoinPackets = this.addPostJoin(this.plugin.createPreparedPacket().prepare(LimboImpl.createSafeClientServerSwitch(legacyJoinGame)));
     this.postJoinPackets = this.addPostJoin(this.plugin.createPreparedPacket());
 
     this.configTransitionPackets = this.plugin.createPreparedPacket()
@@ -256,51 +251,41 @@ public class LimboImpl implements Limbo {
     this.firstChunks = this.createFirstChunks();
     this.delayedChunks = this.createDelayedChunksPackets();
     PreparedPacket respawnPackets = this.plugin.createPreparedPacket()
-        .prepare(
-            this.createPlayerPosAndLook(
-                this.world.getSpawnX(), this.world.getSpawnY(), this.world.getSpawnZ(), this.world.getYaw(), this.world.getPitch()
-            )
-        ).prepare(
-            this.createUpdateViewPosition((int) this.world.getSpawnX(), (int) this.world.getSpawnZ()),
-            ProtocolVersion.MINECRAFT_1_14
-        );
+        .prepare(LimboImpl.createPlayerPosition(this.world.getSpawnX(), this.world.getSpawnY(), this.world.getSpawnZ(), this.world.getYaw(), this.world.getPitch()))
+        .prepare(LimboImpl.createSetChunkCacheCenter((int) this.world.getSpawnX(), (int) this.world.getSpawnZ()), ProtocolVersion.MINECRAFT_1_14);
 
     if (this.shouldUpdateTags) {
-      respawnPackets.prepare(SimpleTagManager::getUpdateTagsPacket,
-          ProtocolVersion.MINECRAFT_1_13, ProtocolVersion.MINECRAFT_1_20);
+      respawnPackets.prepare(SimpleTagManager::getUpdateTagsPacket, ProtocolVersion.MINECRAFT_1_13, ProtocolVersion.MINECRAFT_1_20);
     }
 
     this.respawnPackets = respawnPackets.build();
     this.built = true;
   }
 
-  private ChangeGameStatePacket createLevelChunksLoadStartGameState() {
-    return new ChangeGameStatePacket(13, 0);
+  private GameEventPacket createLevelChunksLoadStartGameEvent() {
+    return new GameEventPacket(13, 0); // LEVEL_CHUNKS_LOAD_START
   }
 
   private RegistrySyncPacket createRegistrySyncLegacy(ProtocolVersion version) {
-    JoinGamePacket join = this.createJoinGamePacket(version);
-
     ByteBuf encodedRegistry = this.plugin.getPreparedPacketFactory().getPreparedPacketAllocator().ioBuffer();
-    ProtocolUtils.writeBinaryTag(encodedRegistry, version, join.getRegistry());
+    ProtocolUtils.writeBinaryTag(encodedRegistry, version, LimboImpl.createRegistry(version));
 
     RegistrySyncPacket sync = new RegistrySyncPacket();
     sync.replace(encodedRegistry);
     return sync;
   }
 
+  @SuppressWarnings("unchecked")
   private void createRegistrySyncModern(PreparedPacket packet, ProtocolVersion from, ProtocolVersion to) {
-    JoinGamePacket join = this.createJoinGamePacket(from);
-
-    CompoundBinaryTag registryTag = join.getRegistry();
+    CompoundBinaryTag registryTag = LimboImpl.createRegistry(from);
     for (String key : registryTag.keySet()) {
       CompoundBinaryTag entry = registryTag.getCompound(key);
 
       String type = entry.getString("type");
       ListBinaryTag values = entry.getList("value", BinaryTagTypes.COMPOUND);
 
-      Pair<String, BinaryTag> emptyTag = null;
-      Pair<String, BinaryTag>[] tags = new Pair[0];
+      Map.Entry<String, BinaryTag> emptyTag = null;
+      Map.Entry<String, BinaryTag>[] tags = new Map.Entry[0];
 
       for (BinaryTag elementTag : values) {
         CompoundBinaryTag element = (CompoundBinaryTag) elementTag;
@@ -309,32 +294,33 @@ public class LimboImpl implements Limbo {
           tags = Arrays.copyOf(tags, id + 1);
         }
 
-        tags[id] = Pair.of(element.getString("name"), element.getCompound("element"));
+        tags[id] = Map.entry(element.getString("name"), element.getCompound("element"));
         if (emptyTag == null) {
           emptyTag = tags[id];
         }
       }
 
-      for (int i = 0; i < tags.length; i++) {
+      for (int i = 0; i < tags.length; ++i) {
         if (tags[i] == null) {
-          tags[i] = Pair.of("limboapi_padding_" + i, emptyTag.value());
+          tags[i] = Map.entry("limboapi_padding_" + i, emptyTag.getValue());
         }
       }
 
-      Pair<String, BinaryTag>[] patchedTags = tags;
+      var patchedTags = tags;
       packet.prepare(version -> {
         ByteBuf registry = this.plugin.getPreparedPacketFactory().getPreparedPacketAllocator().ioBuffer();
 
         ProtocolUtils.writeString(registry, type);
-        ProtocolUtils.writeVarInt(registry, patchedTags.length);
-        for (Pair<String, BinaryTag> tag : patchedTags) {
-          ProtocolUtils.writeString(registry, tag.left());
-
-          registry.writeBoolean(tag.right() != null);
-          if (tag.right() != null) {
-            ProtocolUtils.writeBinaryTag(registry, version, tag.right());
+        LimboProtocolUtils.writeArray(registry, patchedTags, pair -> {
+          ProtocolUtils.writeString(registry, pair.getKey());
+          BinaryTag tag = pair.getValue();
+          if (tag == null) {
+            registry.writeBoolean(false);
+          } else {
+            registry.writeBoolean(true);
+            ProtocolUtils.writeBinaryTag(registry, version, tag);
           }
-        }
+        });
 
         RegistrySyncPacket sync = new RegistrySyncPacket();
         sync.replace(registry);
@@ -344,20 +330,20 @@ public class LimboImpl implements Limbo {
   }
 
   private TagsUpdatePacket createTagsUpdate(ProtocolVersion version) {
-    return new TagsUpdatePacket(SimpleTagManager.getUpdateTagsPacket(version).toVelocityTags());
+    return new TagsUpdatePacket(SimpleTagManager.getUpdateTagsPacket(version).tags());
   }
 
   private PreparedPacket addPostJoin(PreparedPacket packet) {
     return packet.prepare(this.createAvailableCommandsPacket(), ProtocolVersion.MINECRAFT_1_13)
         .prepare(this.createDefaultSpawnPositionPacket())
-        .prepare(this.createLevelChunksLoadStartGameState(), ProtocolVersion.MINECRAFT_1_20_3)
+        .prepare(this.createLevelChunksLoadStartGameEvent(), ProtocolVersion.MINECRAFT_1_20_3)
         .prepare(this.createWorldTicksPacket())
         .prepare(this::createBrandMessage)
         .build();
   }
 
   @Override
-  public void spawnPlayer(Player apiPlayer, LimboSessionHandler handler) {
+  public void spawnPlayer(Player apiPlayer, LimboSessionHandler handler) { // TODO prevent double spawnPlayer without proper disconnect (?) (я уже не помню откуда это и при каких условиях возникает)
     if (!this.built) {
       synchronized (this) {
         if (!this.built) {
@@ -382,21 +368,20 @@ public class LimboImpl implements Limbo {
     boolean shouldSpawnPlayerImmediately = true;
 
     // Discard information from previous server
-    if (player.getConnection().getActiveSessionHandler() instanceof ClientPlaySessionHandler sessionHandler) {
+    if (connection.getActiveSessionHandler() instanceof ClientPlaySessionHandler sessionHandler) {
       connection.eventLoop().execute(() -> {
         player.getTabList().clearAll();
         for (UUID serverBossBar : sessionHandler.getServerBossBars()) {
-          player.getConnection().delayedWrite(BossBarPacket.createRemovePacket(serverBossBar, null));
+          connection.delayedWrite(BossBarPacket.createRemovePacket(serverBossBar, null));
         }
         sessionHandler.getServerBossBars().clear();
 
         if (player.getProtocolVersion().noLessThan(ProtocolVersion.MINECRAFT_1_8)) {
-          player.getConnection().delayedWrite(GenericTitlePacket.constructTitlePacket(
-              GenericTitlePacket.ActionType.RESET, player.getProtocolVersion()));
+          connection.delayedWrite(GenericTitlePacket.constructTitlePacket(GenericTitlePacket.ActionType.RESET, player.getProtocolVersion()));
           player.clearPlayerListHeaderAndFooter();
         }
 
-        player.getConnection().flush();
+        connection.flush();
       });
     }
 
@@ -407,13 +392,12 @@ public class LimboImpl implements Limbo {
         MinecraftConnection serverConnection = server.getConnection();
         if (serverConnection != null) {
           try {
-            GRACEFUL_DISCONNECT_FIELD.invokeExact(server, true);
-          } catch (Throwable e) {
-            throw new ReflectionException(e);
+            GRACEFUL_DISCONNECT_SETTER.invokeExact(server, true);
+          } catch (Throwable t) {
+            throw new ReflectionException(t);
           }
 
-          connection.eventLoop().execute(() ->
-              serverConnection.getChannel().close().addListener(f -> this.spawnPlayerLocal(player, handler, previousServer)));
+          connection.eventLoop().execute(() -> serverConnection.getChannel().close().addListener(f -> this.spawnPlayerLocal(player, handler, previousServer)));
           shouldSpawnPlayerImmediately = false;
         }
 
@@ -427,15 +411,15 @@ public class LimboImpl implements Limbo {
     }
   }
 
-  protected void spawnPlayerLocal(Class<? extends LimboSessionHandler> handlerClass,
-      LimboSessionHandlerImpl sessionHandler, ConnectedPlayer player, MinecraftConnection connection) {
+  protected void spawnPlayerLocal(Class<? extends LimboSessionHandler> handlerClass, LimboSessionHandlerImpl sessionHandler, ConnectedPlayer player, MinecraftConnection connection) {
     if (!connection.eventLoop().inEventLoop()) {
       connection.eventLoop().execute(() -> this.spawnPlayerLocal(handlerClass, sessionHandler, player, connection));
       return;
     }
 
     connection.setActiveSessionHandler(connection.getState(), sessionHandler);
-    if (connection.getProtocolVersion().compareTo(ProtocolVersion.MINECRAFT_1_20_2) >= 0) {
+    ProtocolVersion version = connection.getProtocolVersion();
+    if (version.noLessThan(ProtocolVersion.MINECRAFT_1_20_2)) {
       if (connection.getState() != StateRegistry.CONFIG) {
         if (this.shouldRejoin) {
           // Switch to CONFIG state
@@ -451,14 +435,14 @@ public class LimboImpl implements Limbo {
 
     sessionHandler.onConfig(new LimboPlayerImpl(this.plugin, this, player));
 
-    if (connection.getProtocolVersion().compareTo(ProtocolVersion.MINECRAFT_1_20_2) < 0
-        || (connection.getState() != StateRegistry.CONFIG && !this.shouldRejoin)) {
+    if (version.lessThan(ProtocolVersion.MINECRAFT_1_20_2) || (connection.getState() != StateRegistry.CONFIG && !this.shouldRejoin)) {
       this.onSpawn(handlerClass, connection, player, sessionHandler);
     }
 
     connection.flush();
   }
 
+  @SuppressWarnings("UnnecessaryToStringCall")
   private void spawnPlayerLocal(ConnectedPlayer player, LimboSessionHandler handler, RegisteredServer previousServer) {
     MinecraftConnection connection = player.getConnection();
     connection.eventLoop().execute(() -> {
@@ -471,20 +455,19 @@ public class LimboImpl implements Limbo {
       }
 
       if (Settings.IMP.MAIN.LOGGING_ENABLED) {
-        LimboAPI.getLogger().info(player.getUsername() + " (" + player.getRemoteAddress() + ") has connected to the " + this.limboName + " Limbo");
+        LimboAPI.getLogger().info("{} has connected to the {} Limbo", player.toString(), this.limboName);
       }
 
       // With an abnormally large number of connections from the same nickname,
-      // requests don't have time to be processed, and an error occurs that "minecraft-encoder" doesn't exist.
+      // requests don't have time to be processed, and an error occurs that "minecraft-encoder" doesn't exist
       if (pipeline.get(Connections.MINECRAFT_ENCODER) != null) {
         if (this.readTimeout != null) {
           pipeline.replace(Connections.READ_TIMEOUT, LimboProtocol.READ_TIMEOUT, new ReadTimeoutHandler(this.readTimeout, TimeUnit.MILLISECONDS));
         }
 
         boolean compressionEnabled = false;
-
         if (pipeline.get(PreparedPacketFactory.PREPARED_ENCODER) == null) {
-          if (this.plugin.isCompressionEnabled() && connection.getProtocolVersion().compareTo(ProtocolVersion.MINECRAFT_1_8) >= 0) {
+          if (this.plugin.isCompressionEnabled() && connection.getProtocolVersion().noLessThan(ProtocolVersion.MINECRAFT_1_8)) {
             if (pipeline.get(Connections.FRAME_ENCODER) != null) {
               if (!Settings.IMP.MAIN.COMPATIBILITY_MODE) {
                 pipeline.remove(Connections.FRAME_ENCODER);
@@ -493,24 +476,17 @@ public class LimboImpl implements Limbo {
               if (pipeline.context(Connections.COMPRESSION_DECODER) != null) {
                 this.plugin.fixDecompressor(pipeline, this.plugin.getServer().getConfiguration().getCompressionThreshold(), false);
               }
-            } else {
-              ChannelHandler minecraftCompressDecoder = pipeline.remove(Connections.COMPRESSION_DECODER);
-              if (minecraftCompressDecoder != null) {
-                this.plugin.fixDecompressor(pipeline, this.plugin.getServer().getConfiguration().getCompressionThreshold(), false);
-                pipeline.replace(Connections.COMPRESSION_ENCODER, Connections.COMPRESSION_ENCODER, new ChannelOutboundHandlerAdapter());
-                compressionEnabled = true;
-              }
+            } else if (pipeline.remove(Connections.COMPRESSION_DECODER) != null) {
+              this.plugin.fixDecompressor(pipeline, this.plugin.getServer().getConfiguration().getCompressionThreshold(), false);
+              pipeline.replace(Connections.COMPRESSION_ENCODER, Connections.COMPRESSION_ENCODER, new ChannelOutboundHandlerAdapter());
+              compressionEnabled = true;
             }
           } else if (!Settings.IMP.MAIN.COMPATIBILITY_MODE) {
             pipeline.remove(Connections.FRAME_ENCODER);
           }
 
           this.plugin.inject3rdParty(player, connection, pipeline);
-          if (compressionEnabled) {
-            pipeline.fireUserEventTriggered(VelocityConnectionEvent.COMPRESSION_ENABLED);
-          } else {
-            pipeline.fireUserEventTriggered(VelocityConnectionEvent.COMPRESSION_DISABLED);
-          }
+          pipeline.fireUserEventTriggered(compressionEnabled ? VelocityConnectionEvent.COMPRESSION_ENABLED : VelocityConnectionEvent.COMPRESSION_DISABLED);
         }
       } else {
         connection.close();
@@ -524,17 +500,7 @@ public class LimboImpl implements Limbo {
         }
       }
 
-      LimboSessionHandlerImpl sessionHandler = new LimboSessionHandlerImpl(
-          this.plugin,
-          this,
-          player,
-          handler,
-          connection.getState(),
-          connection.getActiveSessionHandler(),
-          previousServer,
-          () -> this.limboName
-      );
-
+      LimboSessionHandlerImpl sessionHandler = new LimboSessionHandlerImpl(this.plugin, this, player, handler, connection.getState(), connection.getActiveSessionHandler(), previousServer);
       if (connection.getActiveSessionHandler() instanceof LoginConfirmHandler confirm) {
         confirm.waitForConfirmation(() -> {
           this.currentOnline.increment();
@@ -547,8 +513,7 @@ public class LimboImpl implements Limbo {
     });
   }
 
-  protected void onSpawn(Class<? extends LimboSessionHandler> handlerClass,
-      MinecraftConnection connection, ConnectedPlayer player, LimboSessionHandlerImpl sessionHandler) {
+  protected void onSpawn(Class<? extends LimboSessionHandler> handlerClass, MinecraftConnection connection, ConnectedPlayer player, LimboSessionHandlerImpl sessionHandler) {
     this.plugin.setState(connection, this.localStateRegistry);
     if (this.plugin.isLimboJoined(player)) {
       if (this.shouldRejoin) {
@@ -566,31 +531,21 @@ public class LimboImpl implements Limbo {
       connection.delayedWrite(this.joinPackets);
     }
 
+    UUID uuid = LimboAPI.getClientUniqueId(player);
     MinecraftPacket playerInfoPacket;
-
-    UUID uuid = this.plugin.getInitialID(player);
-    if (connection.getProtocolVersion().compareTo(ProtocolVersion.MINECRAFT_1_19_1) <= 0) {
-      playerInfoPacket = new LegacyPlayerListItemPacket(
-          LegacyPlayerListItemPacket.ADD_PLAYER,
-          List.of(
-              new LegacyPlayerListItemPacket.Item(uuid)
-                  .setName(player.getUsername())
-                  .setGameMode(this.gameMode)
-                  .setProperties(player.getGameProfileProperties())
-          )
+    if (connection.getProtocolVersion().noGreaterThan(ProtocolVersion.MINECRAFT_1_19_1)) {
+      playerInfoPacket = new LegacyPlayerListItemPacket(LegacyPlayerListItemPacket.ADD_PLAYER,
+          Collections.singletonList(new LegacyPlayerListItemPacket.Item(uuid).setName(player.getUsername()).setGameMode(this.gameMode).setProperties(player.getGameProfileProperties()))
       );
     } else {
       UpsertPlayerInfoPacket.Entry playerInfoEntry = new UpsertPlayerInfoPacket.Entry(uuid);
       playerInfoEntry.setDisplayName(new ComponentHolder(player.getProtocolVersion(), Component.text(player.getUsername())));
       playerInfoEntry.setGameMode(this.gameMode);
       playerInfoEntry.setProfile(player.getGameProfile());
-
       playerInfoPacket = new UpsertPlayerInfoPacket(
-          EnumSet.of(
-              UpsertPlayerInfoPacket.Action.UPDATE_DISPLAY_NAME,
-              UpsertPlayerInfoPacket.Action.UPDATE_GAME_MODE,
-              UpsertPlayerInfoPacket.Action.ADD_PLAYER),
-          List.of(playerInfoEntry));
+          EnumSet.of(UpsertPlayerInfoPacket.Action.UPDATE_DISPLAY_NAME, UpsertPlayerInfoPacket.Action.UPDATE_GAME_MODE, UpsertPlayerInfoPacket.Action.ADD_PLAYER),
+          Collections.singletonList(playerInfoEntry)
+      );
     }
 
     connection.delayedWrite(playerInfoPacket);
@@ -615,29 +570,28 @@ public class LimboImpl implements Limbo {
       connection.write(this.firstChunks);
     }
 
-    if (!this.delayedChunks.isEmpty()) {
-      AtomicReference<ScheduledFuture<?>> task = new AtomicReference<>();
-      task.set(connection.eventLoop().scheduleAtFixedRate(new Runnable() {
+    List<PreparedPacket> chunksSnapshot = this.delayedChunks;
+    if (!chunksSnapshot.isEmpty()) {
+      ScheduledFuture<?>[] task = new ScheduledFuture<?>[1];
+      task[0] = connection.eventLoop().scheduleAtFixedRate(new Runnable() {
 
-        private final List<PreparedPacket> chunksSnapshot = LimboImpl.this.delayedChunks;
         private int index;
 
         @Override
         public void run() {
           if (connection.isClosed()) {
-            task.get().cancel(false);
+            task[0].cancel(false);
             return;
           }
 
-          connection.write(this.chunksSnapshot.get(this.index));
-          if (++this.index >= this.chunksSnapshot.size()) {
-            task.get().cancel(false);
+          connection.write(chunksSnapshot.get(this.index));
+          if (++this.index >= chunksSnapshot.size()) {
+            task[0].cancel(false);
           }
         }
-      }, 50, 50, TimeUnit.MILLISECONDS));
-
+      }, 50, 50, TimeUnit.MILLISECONDS);
       if (connection.getActiveSessionHandler() instanceof LimboSessionHandlerImpl sessionHandler) {
-        sessionHandler.setRespawnTask(task.get());
+        sessionHandler.setRespawnTask(task[0]);
       }
     }
   }
@@ -672,9 +626,12 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setName(String name) {
     this.limboName = name;
-
     this.built = false;
     return this;
+  }
+
+  public String getName() {
+    return this.limboName;
   }
 
   @Override
@@ -686,15 +643,13 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setWorldTime(long ticks) {
     this.worldTicks = ticks;
-
     this.built = false;
     return this;
   }
 
   @Override
   public Limbo setGameMode(GameMode gameMode) {
-    this.gameMode = gameMode.getID();
-
+    this.gameMode = gameMode.getId();
     this.built = false;
     return this;
   }
@@ -702,7 +657,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setShouldRejoin(boolean shouldRejoin) {
     this.shouldRejoin = shouldRejoin;
-
     this.built = false;
     return this;
   }
@@ -710,7 +664,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setShouldRespawn(boolean shouldRespawn) {
     this.shouldRespawn = shouldRespawn;
-
     this.built = false;
     return this;
   }
@@ -718,7 +671,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setShouldUpdateTags(boolean shouldUpdateTags) {
     this.shouldUpdateTags = shouldUpdateTags;
-
     this.built = false;
     return this;
   }
@@ -726,7 +678,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setReducedDebugInfo(boolean reducedDebugInfo) {
     this.reducedDebugInfo = reducedDebugInfo;
-
     this.built = false;
     return this;
   }
@@ -734,7 +685,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setViewDistance(int viewDistance) {
     this.viewDistance = viewDistance;
-
     this.built = false;
     return this;
   }
@@ -742,7 +692,6 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setSimulationDistance(int simulationDistance) {
     this.simulationDistance = simulationDistance;
-
     this.built = false;
     return this;
   }
@@ -750,27 +699,26 @@ public class LimboImpl implements Limbo {
   @Override
   public Limbo setMaxSuppressPacketLength(int maxSuppressPacketLength) {
     this.maxSuppressPacketLength = maxSuppressPacketLength;
-
     return this;
   }
 
   @Override
-  public Limbo registerCommand(LimboCommandMeta commandMeta) {
+  public Limbo registerCommand(CommandMeta commandMeta) {
     return this.registerCommand(commandMeta, (SimpleCommand) invocation -> {
-      // Do nothing.
+      // Do nothing
     });
   }
 
   @Override
   public Limbo registerCommand(CommandMeta commandMeta, Command command) {
     for (CommandRegistrar<?> registrar : this.registrars) {
-      if (this.tryRegister(registrar, commandMeta, command)) {
+      if (LimboImpl.tryRegister(registrar, commandMeta, command)) {
         this.built = false;
         return this;
       }
     }
 
-    throw new IllegalArgumentException(command + " does not implement a registrable Command sub-interface.");
+    throw new IllegalArgumentException(command + " does not implement a registrable Command sub-interface");
   }
 
   public Limbo registerPacket(PacketDirection direction, Class<?> packetClass, Supplier<?> packetSupplier, PacketMapping[] packetMappings) {
@@ -780,7 +728,6 @@ public class LimboImpl implements Limbo {
     }
 
     LimboProtocol.register(this.localStateRegistry, direction, packetClass, packetSupplier, packetMappings);
-
     return this;
   }
 
@@ -795,7 +742,6 @@ public class LimboImpl implements Limbo {
 
   private List<PreparedPacket> takeSnapshot() {
     List<PreparedPacket> packets = new ArrayList<>();
-
     if (this.joinPackets != null) {
       packets.add(this.joinPackets);
     }
@@ -823,7 +769,6 @@ public class LimboImpl implements Limbo {
     if (this.configPackets != null) {
       packets.add(this.configPackets);
     }
-
     return packets;
   }
 
@@ -834,18 +779,18 @@ public class LimboImpl implements Limbo {
     this.brandMessages.clear();
   }
 
-  // From Velocity.
-  private <T extends Command> boolean tryRegister(CommandRegistrar<T> registrar, CommandMeta commandMeta, Command command) {
+  // From Velocity
+  private static <T extends Command> boolean tryRegister(CommandRegistrar<T> registrar, CommandMeta commandMeta, Command command) {
     Class<T> superInterface = registrar.registrableSuperInterface();
     if (superInterface.isInstance(command)) {
       registrar.register(commandMeta, superInterface.cast(command));
       return true;
-    } else {
-      return false;
     }
+
+    return false;
   }
 
-  private CompoundBinaryTag createRegistry(String registryName, Map<String, CompoundBinaryTag> tags) {
+  private static CompoundBinaryTag createRegistry(String registryName, Map<String, CompoundBinaryTag> tags) {
     int id = 0;
 
     ListBinaryTag.Builder<CompoundBinaryTag> builder = ListBinaryTag.builder(BinaryTagTypes.COMPOUND);
@@ -854,20 +799,22 @@ public class LimboImpl implements Limbo {
           .putString("name", tag.getKey())
           .putInt("id", id++)
           .put("element", tag.getValue())
-          .build());
+          .build()
+      );
     }
 
-    return this.createRegistry(registryName, builder.build());
+    return LimboImpl.createRegistry(registryName, builder.build());
   }
 
-  private CompoundBinaryTag createRegistry(String registryName, ListBinaryTag tags) {
+  private static CompoundBinaryTag createRegistry(String registryName, ListBinaryTag tags) {
     return CompoundBinaryTag.builder()
         .putString("type", registryName)
-        .put("value", tags).build();
+        .put("value", tags)
+        .build();
   }
 
-  private CompoundBinaryTag createDimensionData(Dimension dimension, ProtocolVersion version) {
-    CompoundBinaryTag details = CompoundBinaryTag.builder()
+  private static CompoundBinaryTag createDimensionData(Dimension dimension, ProtocolVersion version) {
+    var details = CompoundBinaryTag.builder()
         .putBoolean("natural", false)
         .putFloat("ambient_light", 0.0F)
         .putBoolean("shrunk", false)
@@ -879,24 +826,20 @@ public class LimboImpl implements Limbo {
         .putBoolean("respawn_anchor_works", false)
         .putBoolean("has_raids", false)
         .putInt("logical_height", 256)
-        .putString("infiniburn", version.compareTo(ProtocolVersion.MINECRAFT_1_18_2) >= 0 ? "#minecraft:infiniburn_nether" : "minecraft:infiniburn_nether")
+        .putString("infiniburn", version.noLessThan(ProtocolVersion.MINECRAFT_1_18_2) ? "#minecraft:infiniburn_nether" : "minecraft:infiniburn_nether")
         .putDouble("coordinate_scale", 1.0)
         .putString("effects", dimension.getKey())
         .putInt("min_y", 0)
         .putInt("height", 256)
         .putInt("monster_spawn_block_light_limit", 0)
-        .putInt("monster_spawn_light_level", 0)
-        .build();
-
-    if (version.compareTo(ProtocolVersion.MINECRAFT_1_16_2) >= 0) {
-      return CompoundBinaryTag.builder()
-          .putString("name", dimension.getKey())
-          .putInt("id", dimension.getModernID())
-          .put("element", details)
-          .build();
-    } else {
-      return details.putString("name", dimension.getKey());
-    }
+        .putInt("monster_spawn_light_level", 0);
+    return version.noLessThan(ProtocolVersion.MINECRAFT_1_16_2)
+        ? CompoundBinaryTag.builder()
+            .putString("name", dimension.getKey())
+            .putInt("id", dimension.getModernId())
+            .put("element", details.build())
+            .build()
+        : details.putString("name", dimension.getKey()).build();
   }
 
   private JoinGamePacket createJoinGamePacket(ProtocolVersion version) {
@@ -906,12 +849,12 @@ public class LimboImpl implements Limbo {
     joinGame.setIsHardcore(true);
     joinGame.setGamemode(this.gameMode);
     joinGame.setPreviousGamemode((short) -1);
-    joinGame.setDimension(dimension.getModernID());
+    joinGame.setDimension(dimension.getModernId());
     joinGame.setDifficulty((short) 0);
     try {
-      PARTIAL_HASHED_SEED_FIELD.invokeExact(joinGame, ThreadLocalRandom.current().nextLong());
-    } catch (Throwable e) {
-      throw new ReflectionException(e);
+      PARTIAL_HASHED_SEED_SETTER.invokeExact(joinGame, ThreadLocalRandom.current().nextLong());
+    } catch (Throwable t) {
+      throw new ReflectionException(t);
     }
     joinGame.setMaxPlayers(1);
 
@@ -925,30 +868,42 @@ public class LimboImpl implements Limbo {
     String key = dimension.getKey();
     joinGame.setDimensionInfo(new DimensionInfo(key, key, false, false, version));
 
-    CompoundBinaryTag.Builder registryContainer = CompoundBinaryTag.builder();
-    ListBinaryTag encodedDimensionRegistry = ListBinaryTag.builder(BinaryTagTypes.COMPOUND)
-        .add(this.createDimensionData(Dimension.OVERWORLD, version))
-        .add(this.createDimensionData(Dimension.NETHER, version))
-        .add(this.createDimensionData(Dimension.THE_END, version))
-        .build();
+    try {
+      ListBinaryTag dimensionRegistry = LimboImpl.createDimensionRegistry(version);
+      CompoundBinaryTag currentDimensionData = dimensionRegistry.getCompound(dimension.getModernId());
+      if (version.noLessThan(ProtocolVersion.MINECRAFT_1_16_2)) {
+        currentDimensionData = currentDimensionData.getCompound("element");
+      }
 
-    if (version.compareTo(ProtocolVersion.MINECRAFT_1_16_2) >= 0) {
-      CompoundBinaryTag.Builder dimensionRegistryEntry = CompoundBinaryTag.builder();
-      dimensionRegistryEntry.putString("type", "minecraft:dimension_type");
-      dimensionRegistryEntry.put("value", encodedDimensionRegistry);
-      registryContainer.put("minecraft:dimension_type", dimensionRegistryEntry.build());
-      registryContainer.put("minecraft:worldgen/biome", Biome.getRegistry(version));
-      if (version.compareTo(ProtocolVersion.MINECRAFT_1_19) == 0) {
-        registryContainer.put("minecraft:chat_type", CHAT_TYPE_119);
-      } else if (version.compareTo(ProtocolVersion.MINECRAFT_1_19_1) >= 0) {
-        registryContainer.put("minecraft:chat_type", CHAT_TYPE_1191);
+      LEVEL_NAMES_SETTER.invokeExact(joinGame, LEVELS);
+      REGISTRY_SETTER.invokeExact(joinGame, LimboImpl.createRegistry(version, dimensionRegistry));
+      CURRENT_DIMENSION_DATA_SETTER.invokeExact(joinGame, currentDimensionData);
+    } catch (Throwable t) {
+      throw new ReflectionException(t);
+    }
+
+    return joinGame;
+  }
+
+  private static CompoundBinaryTag createRegistry(ProtocolVersion version) {
+    return LimboImpl.createRegistry(version, LimboImpl.createDimensionRegistry(version));
+  }
+
+  private static CompoundBinaryTag createRegistry(ProtocolVersion version, ListBinaryTag dimensionRegistry) {
+    CompoundBinaryTag.Builder registry = CompoundBinaryTag.builder();
+    if (version.noLessThan(ProtocolVersion.MINECRAFT_1_16_2)) {
+      registry.put("minecraft:dimension_type", CompoundBinaryTag.builder().putString("type", "minecraft:dimension_type").put("value", dimensionRegistry).build());
+      registry.put("minecraft:worldgen/biome", Biome.getRegistry(version));
+      if (version == ProtocolVersion.MINECRAFT_1_19) {
+        registry.put("minecraft:chat_type", CHAT_TYPE_119);
+      } else if (version.noLessThan(ProtocolVersion.MINECRAFT_1_19_1)) {
+        registry.put("minecraft:chat_type", CHAT_TYPE_1191);
       }
 
       // TODO: Generate mappings for damage_type registry
-      if (version.compareTo(ProtocolVersion.MINECRAFT_1_19_4) == 0) {
-        registryContainer.put("minecraft:damage_type", DAMAGE_TYPE_1194);
-      } else if (version.compareTo(ProtocolVersion.MINECRAFT_1_21) >= 0) {
-        CompoundBinaryTag.Builder builder = CompoundBinaryTag.builder();
+      if (version == ProtocolVersion.MINECRAFT_1_19_4) {
+        registry.put("minecraft:damage_type", DAMAGE_TYPE_1194);
+      } else if (version.noLessThan(ProtocolVersion.MINECRAFT_1_21)) {
         ListBinaryTag values = DAMAGE_TYPE_120.getList("value");
 
         ListBinaryTag.Builder<CompoundBinaryTag> tags = ListBinaryTag.builder(BinaryTagTypes.COMPOUND);
@@ -956,174 +911,149 @@ public class LimboImpl implements Limbo {
           tags.add((CompoundBinaryTag) tag);
         }
 
-        String[] types;
-        if (version.compareTo(ProtocolVersion.MINECRAFT_1_21_2) >= 0) {
-          types = new String[] { "minecraft:campfire", "minecraft:ender_pearl", "minecraft:mace_smash" };
-        } else {
-          types = new String[] { "minecraft:campfire" };
-        }
-
         int id = values.size();
-        for (String name : types) {
-          CompoundBinaryTag.Builder type = CompoundBinaryTag.builder()
+        for (String name : version.noLessThan(ProtocolVersion.MINECRAFT_1_21_2)
+            ? new String[] {"minecraft:campfire", "minecraft:ender_pearl", "minecraft:mace_smash"}
+            : new String[] {"minecraft:campfire"}) {
+          tags.add(CompoundBinaryTag.builder()
               .putString("name", name)
               .putInt("id", id++)
-              .put("element", values.getCompound(0).getCompound("element"));
-
-          tags.add(type.build());
+              .put("element", values.getCompound(0).getCompound("element"))
+              .build()
+          );
         }
 
-        registryContainer.put("minecraft:damage_type", this.createRegistry("minecraft:damage_type", tags.build()));
-      } else if (version.compareTo(ProtocolVersion.MINECRAFT_1_20) >= 0) {
-        registryContainer.put("minecraft:damage_type", DAMAGE_TYPE_120);
+        registry.put("minecraft:damage_type", LimboImpl.createRegistry("minecraft:damage_type", tags.build()));
+      } else if (version.noLessThan(ProtocolVersion.MINECRAFT_1_20)) {
+        registry.put("minecraft:damage_type", DAMAGE_TYPE_120);
       }
 
       // TODO: Auto-generate mappings and implement some APIs
-      if (version.compareTo(ProtocolVersion.MINECRAFT_1_21) >= 0) {
-        CompoundBinaryTag.Builder paintingVariant = CompoundBinaryTag.builder()
-            .putInt("width", 1)
-            .putInt("height", 1)
-            .putString("asset_id", "minecraft:alban");
-
-        registryContainer.put("minecraft:painting_variant", this.createRegistry("minecraft:painting_variant",
-            Map.of("minecraft:alban", paintingVariant.build())));
-
-        if (version.compareTo(ProtocolVersion.MINECRAFT_1_21_5) >= 0) {
-          // Cat
-          CompoundBinaryTag.Builder catVariant = CompoundBinaryTag.builder()
-              .putString("asset_id", "minecraft:entity/cat/all_black")
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:cat_variant", this.createRegistry("minecraft:cat_variant",
-              Map.of("minecraft:all_black", catVariant.build())));
-
-          // Chicken
-          CompoundBinaryTag.Builder chickenVariant = CompoundBinaryTag.builder()
-              .putString("asset_id", "minecraft:entity/chicken/cold_chicken")
-              .putString("model", "cold")
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:chicken_variant", this.createRegistry("minecraft:chicken_variant",
-              Map.of("minecraft:cold", chickenVariant.build())));
-
-          // Cow
-          CompoundBinaryTag.Builder cowVariant = CompoundBinaryTag.builder()
-              .putString("asset_id", "minecraft:entity/cow/cold_cow")
-              .putString("model", "cold")
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:cow_variant", this.createRegistry("minecraft:cow_variant",
-              Map.of("minecraft:cold", cowVariant.build())));
-
-          // Frog
-          CompoundBinaryTag.Builder frogVariant = CompoundBinaryTag.builder()
-              .putString("asset_id", "minecraft:entity/frog/cold_frog")
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:frog_variant", this.createRegistry("minecraft:frog_variant",
-              Map.of("minecraft:cold", frogVariant.build())));
-
-          // Pig
-          CompoundBinaryTag.Builder pigVariant = CompoundBinaryTag.builder()
-              .putString("asset_id", "minecraft:entity/pig/cold_pig")
-              .putString("model", "cold")
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:pig_variant", this.createRegistry("minecraft:pig_variant",
-              Map.of("minecraft:cold", pigVariant.build())));
-
-          // Wolf Sound Variant
-          CompoundBinaryTag.Builder wolfSoundVariant = CompoundBinaryTag.builder()
-              .putString("ambient_sound", "minecraft:entity.wolf_angry.ambient")
-              .putString("death_sound", "minecraft:entity.wolf_angry.death")
-              .putString("growl_sound", "minecraft:entity.wolf_angry.growl")
-              .putString("hurt_sound", "minecraft:entity.wolf_angry.hurt")
-              .putString("pant_sound", "minecraft:entity.wolf_angry.pant")
-              .putString("whine_sound", "minecraft:entity.wolf_angry.whine");
-
-          registryContainer.put("minecraft:wolf_sound_variant", this.createRegistry("minecraft:wolf_sound_variant",
-              Map.of("minecraft:angry", wolfSoundVariant.build())));
-
-          // Wolf
-          CompoundBinaryTag.Builder wolfVariant = CompoundBinaryTag.builder()
-              .put("assets", CompoundBinaryTag.builder()
-                  .putString("wild", "minecraft:entity/wolf/wolf_ashen")
-                  .putString("tame", "minecraft:entity/wolf/wolf_ashen_tame")
-                  .putString("angry", "minecraft:entity/wolf/wolf_ashen_angry")
-                  .build())
-              .put("spawn_conditions", ListBinaryTag.empty());
-
-          registryContainer.put("minecraft:wolf_variant", this.createRegistry("minecraft:wolf_variant",
-              Map.of("minecraft:ashen", wolfVariant.build())));
+      if (version.noLessThan(ProtocolVersion.MINECRAFT_1_20_5)) {
+        // TODO мб ещё сюда и варианты для баннеров добавлять (если их в регистре не отправить, то они пустыми будут)
+        if (version.lessThan(ProtocolVersion.MINECRAFT_1_21_5)) {
+          registry.put("minecraft:wolf_variant", LimboImpl.createRegistry("minecraft:wolf_variant", Collections.singletonMap(
+              "minecraft:ashen", CompoundBinaryTag.builder()
+                  .putString("wild_texture", "minecraft:entity/wolf/wolf_ashen")
+                  .putString("tame_texture", "minecraft:entity/wolf/wolf_ashen_tame")
+                  .putString("angry_texture", "minecraft:entity/wolf/wolf_ashen_angry")
+                  .put("biomes", ListBinaryTag.builder().add(StringBinaryTag.stringBinaryTag("minecraft:plains")).build())
+                  .build()
+          )));
         } else {
-          CompoundBinaryTag.Builder wolfVariant = CompoundBinaryTag.builder()
-              .putString("wild_texture", "minecraft:entity/wolf/wolf_ashen")
-              .putString("tame_texture", "minecraft:entity/wolf/wolf_ashen_tame")
-              .putString("angry_texture", "minecraft:entity/wolf/wolf_ashen_angry")
-              .put("biomes", ListBinaryTag.builder()
-                  .add(StringBinaryTag.stringBinaryTag("minecraft:plains")).build()
-              );
-
-          registryContainer.put("minecraft:wolf_variant", this.createRegistry("minecraft:wolf_variant",
-              Map.of("minecraft:ashen", wolfVariant.build())));
+          registry.put("minecraft:wolf_variant", LimboImpl.createRegistry("minecraft:wolf_variant", Collections.singletonMap(
+              "minecraft:ashen", CompoundBinaryTag.builder()
+                  .put("assets", CompoundBinaryTag.builder()
+                      .putString("wild", "minecraft:entity/wolf/wolf_ashen")
+                      .putString("tame", "minecraft:entity/wolf/wolf_ashen_tame")
+                      .putString("angry", "minecraft:entity/wolf/wolf_ashen_angry")
+                      .build()
+                  ).put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
+          registry.put("minecraft:wolf_sound_variant", LimboImpl.createRegistry("minecraft:wolf_sound_variant", Collections.singletonMap(
+              "minecraft:angry", CompoundBinaryTag.builder()
+                  .putString("ambient_sound", "minecraft:entity.wolf_angry.ambient")
+                  .putString("death_sound", "minecraft:entity.wolf_angry.death")
+                  .putString("growl_sound", "minecraft:entity.wolf_angry.growl")
+                  .putString("hurt_sound", "minecraft:entity.wolf_angry.hurt")
+                  .putString("pant_sound", "minecraft:entity.wolf_angry.pant")
+                  .putString("whine_sound", "minecraft:entity.wolf_angry.whine")
+                  .build()
+          )));
+          registry.put("minecraft:cat_variant", LimboImpl.createRegistry("minecraft:cat_variant", Collections.singletonMap(
+              "minecraft:all_black", CompoundBinaryTag.builder()
+                  .putString("asset_id", "minecraft:entity/cat/all_black")
+                  .put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
+          registry.put("minecraft:chicken_variant", LimboImpl.createRegistry("minecraft:chicken_variant", Collections.singletonMap(
+              "minecraft:cold", CompoundBinaryTag.builder()
+                  .putString("asset_id", "minecraft:entity/chicken/cold_chicken")
+                  .putString("model", "cold")
+                  .put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
+          registry.put("minecraft:cow_variant", LimboImpl.createRegistry("minecraft:cow_variant", Collections.singletonMap(
+              "minecraft:cold", CompoundBinaryTag.builder()
+                  .putString("asset_id", "minecraft:entity/cow/cold_cow")
+                  .putString("model", "cold")
+                  .put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
+          registry.put("minecraft:frog_variant", LimboImpl.createRegistry("minecraft:frog_variant", Collections.singletonMap(
+              "minecraft:cold", CompoundBinaryTag.builder()
+                  .putString("asset_id", "minecraft:entity/frog/cold_frog")
+                  .put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
+          registry.put("minecraft:pig_variant", LimboImpl.createRegistry("minecraft:pig_variant", Collections.singletonMap(
+              "minecraft:cold", CompoundBinaryTag.builder()
+                  .putString("asset_id", "minecraft:entity/pig/cold_pig")
+                  .putString("model", "cold")
+                  .put("spawn_conditions", ListBinaryTag.empty())
+                  .build()
+          )));
         }
       }
-    } else {
-      registryContainer.put("dimension", encodedDimensionRegistry);
-    }
-
-    try {
-      CompoundBinaryTag currentDimensionData = encodedDimensionRegistry.getCompound(dimension.getModernID());
-      if (version.compareTo(ProtocolVersion.MINECRAFT_1_16_2) >= 0) {
-        currentDimensionData = currentDimensionData.getCompound("element");
+      if (version.noLessThan(ProtocolVersion.MINECRAFT_1_21)) {
+        registry.put("minecraft:painting_variant", LimboImpl.createRegistry("minecraft:painting_variant", Collections.singletonMap(
+            "minecraft:alban", CompoundBinaryTag.builder()
+                .putInt("width", 1)
+                .putInt("height", 1)
+                .putString("asset_id", "minecraft:alban")
+                .build()
+        )));
       }
-
-      CURRENT_DIMENSION_DATA_FIELD.invokeExact(joinGame, currentDimensionData);
-      LEVEL_NAMES_FIELDS.invokeExact(joinGame, LEVELS);
-      REGISTRY_FIELD.invokeExact(joinGame, registryContainer.build());
-    } catch (Throwable e) {
-      throw new ReflectionException(e);
+    } else {
+      registry.put("dimension", dimensionRegistry);
     }
 
-    return joinGame;
+    return registry.build();
+  }
+
+  private static ListBinaryTag createDimensionRegistry(ProtocolVersion version) {
+    return ListBinaryTag.builder(BinaryTagTypes.COMPOUND)
+        .add(LimboImpl.createDimensionData(Dimension.OVERWORLD, version))
+        .add(LimboImpl.createDimensionData(Dimension.NETHER, version))
+        .add(LimboImpl.createDimensionData(Dimension.THE_END, version))
+        .build();
   }
 
   private JoinGamePacket createLegacyJoinGamePacket() {
     JoinGamePacket joinGame = this.createJoinGamePacket(ProtocolVersion.MINIMUM_VERSION);
-    joinGame.setDimension(this.world.getDimension().getLegacyID());
+    joinGame.setDimension(this.world.getDimension().getLegacyId());
     return joinGame;
   }
 
   private DefaultSpawnPositionPacket createDefaultSpawnPositionPacket() {
-    return new DefaultSpawnPositionPacket((int) this.world.getSpawnX(), (int) this.world.getSpawnY(), (int) this.world.getSpawnZ(), 0.0F);
+    return new DefaultSpawnPositionPacket(this.world.getDimension().getKey(), (int) this.world.getSpawnX(), (int) this.world.getSpawnY(), (int) this.world.getSpawnZ(), 0.0F, 0.0F);
   }
 
-  private TimeUpdatePacket createWorldTicksPacket() {
-    return this.worldTicks == null ? null : new TimeUpdatePacket(this.worldTicks, this.worldTicks);
+  private SetTimePacket createWorldTicksPacket() {
+    return this.worldTicks == null ? null : new SetTimePacket(this.worldTicks, this.worldTicks);
   }
 
   private AvailableCommandsPacket createAvailableCommandsPacket() {
     try {
       AvailableCommandsPacket packet = new AvailableCommandsPacket();
-      ROOT_NODE_FIELD.invokeExact(packet, this.commandNode);
+      ROOT_NODE_SETTER.invokeExact(packet, this.commandNode);
       return packet;
-    } catch (Throwable e) {
-      throw new ReflectionException(e);
+    } catch (Throwable t) {
+      throw new ReflectionException(t);
     }
   }
 
   private PreparedPacket createFirstChunks() {
     PreparedPacket packet = this.plugin.createPreparedPacket();
-    List<List<VirtualChunk>> orderedChunks = this.world.getOrderedChunks();
-
     int chunkCounter = 0;
-    for (List<VirtualChunk> chunksWithSameDistance : orderedChunks) {
+    for (List<VirtualChunk> chunksWithSameDistance : this.world.getOrderedChunks()) {
       if (++chunkCounter > Settings.IMP.MAIN.CHUNK_RADIUS_SEND_ON_SPAWN) {
         break;
       }
 
       for (VirtualChunk chunk : chunksWithSameDistance) {
-        packet.prepare(this.createChunkData(chunk, this.world.getDimension()));
+        this.plugin.getPacketFactory().prepareCompleteChunkDataPacket(this.plugin.getPrepareMinVersion(), this.plugin.getPrepareMaxVersion(), packet, chunk.createSnapshot(true), this.world.getDimension());
       }
     }
 
@@ -1131,17 +1061,17 @@ public class LimboImpl implements Limbo {
   }
 
   private List<PreparedPacket> createDelayedChunksPackets() {
-    List<List<VirtualChunk>> orderedChunks = this.world.getOrderedChunks();
+    var orderedChunks = this.world.getOrderedChunks();
     if (orderedChunks.size() <= Settings.IMP.MAIN.CHUNK_RADIUS_SEND_ON_SPAWN) {
-      return List.of();
+      return Collections.emptyList();
     }
 
     List<PreparedPacket> packets = new LinkedList<>();
     PreparedPacket packet = this.plugin.createPreparedPacket();
     int chunkCounter = 0;
 
-    Iterator<List<VirtualChunk>> distanceIterator = orderedChunks.listIterator();
-    for (int i = 0; i < Settings.IMP.MAIN.CHUNK_RADIUS_SEND_ON_SPAWN; i++) {
+    var distanceIterator = orderedChunks.listIterator();
+    for (int i = 0; i < Settings.IMP.MAIN.CHUNK_RADIUS_SEND_ON_SPAWN; ++i) {
       distanceIterator.next();
     }
 
@@ -1153,17 +1083,16 @@ public class LimboImpl implements Limbo {
           chunkCounter = 0;
         }
 
-        packet.prepare(this.createChunkData(chunk, this.world.getDimension()));
+        this.plugin.getPacketFactory().prepareCompleteChunkDataPacket(this.plugin.getPrepareMinVersion(), this.plugin.getPrepareMaxVersion(), packet, chunk.createSnapshot(true), this.world.getDimension());
       }
     }
 
     packets.add(packet.build());
-
     return packets;
   }
 
-  // From Velocity.
-  private List<MinecraftPacket> createFastClientServerSwitch(JoinGamePacket joinGame, ProtocolVersion version) {
+  // From Velocity
+  private static List<MinecraftPacket> createFastClientServerSwitch(JoinGamePacket joinGame, ProtocolVersion version) {
     // In order to handle switching to another server, you will need to send two packets:
     //
     // - The join game packet from the backend server, with a different dimension.
@@ -1172,24 +1101,18 @@ public class LimboImpl implements Limbo {
     // Most notably, by having the client accept the join game packet, we can work around the need
     // to perform entity ID rewrites, eliminating potential issues from rewriting packets and
     // improving compatibility with mods.
-    List<MinecraftPacket> packets = new ArrayList<>();
-
     RespawnPacket respawn = RespawnPacket.fromJoinGame(joinGame);
-
-    if (version.compareTo(ProtocolVersion.MINECRAFT_1_16) < 0) {
+    if (version.lessThan(ProtocolVersion.MINECRAFT_1_16)) {
       // Before Minecraft 1.16, we could not switch to the same dimension without sending an
       // additional respawn. On older versions of Minecraft this forces the client to perform
       // garbage collection which adds additional latency.
       joinGame.setDimension(joinGame.getDimension() == 0 ? -1 : 0);
     }
 
-    packets.add(joinGame);
-    packets.add(respawn);
-
-    return packets;
+    return List.of(joinGame, respawn);
   }
 
-  private List<MinecraftPacket> createSafeClientServerSwitch(JoinGamePacket joinGame) {
+  private static List<MinecraftPacket> createSafeClientServerSwitch(JoinGamePacket joinGame) {
     // Some clients do not behave well with the "fast" respawn sequence. In this case we will use
     // a "safe" respawn sequence that involves sending three packets to the client. They have the
     // same effect but tend to work better with buggier clients (Forge 1.8 in particular).
@@ -1204,8 +1127,7 @@ public class LimboImpl implements Limbo {
     packets.add(fakeSwitchPacket);
 
     // Now send a respawn packet in the correct dimension.
-    RespawnPacket correctSwitchPacket = RespawnPacket.fromJoinGame(joinGame);
-    packets.add(correctSwitchPacket);
+    packets.add(RespawnPacket.fromJoinGame(joinGame));
 
     return packets;
   }
@@ -1221,26 +1143,22 @@ public class LimboImpl implements Limbo {
 
   private PluginMessagePacket createBrandMessage(ProtocolVersion version) {
     String brand = "LimboAPI (" + Settings.IMP.VERSION + ") -> " + this.limboName;
-    ByteBuf bufWithBrandString = Unpooled.buffer();
-    if (version.compareTo(ProtocolVersion.MINECRAFT_1_8) < 0) {
-      bufWithBrandString.writeCharSequence(brand, StandardCharsets.UTF_8);
+    ByteBuf buf = Unpooled.buffer(2 + brand.length());
+    if (version.noGreaterThan(ProtocolVersion.MINECRAFT_1_7_6)) {
+      buf.writeCharSequence(brand, StandardCharsets.UTF_8);
     } else {
-      ProtocolUtils.writeString(bufWithBrandString, brand);
+      ProtocolUtils.writeString(buf, brand);
     }
 
-    return new PluginMessagePacket("MC|Brand", bufWithBrandString);
+    return new PluginMessagePacket("MC|Brand", buf);
   }
 
-  private PositionRotationPacket createPlayerPosAndLook(double posX, double posY, double posZ, float yaw, float pitch) {
-    return new PositionRotationPacket(posX, posY, posZ, yaw, pitch, false, 44, true);
+  private static PlayerPositionPacket createPlayerPosition(double posX, double posY, double posZ, float yaw, float pitch) {
+    return new PlayerPositionPacket(posX, posY, posZ, yaw, pitch, false, 44, true);
   }
 
-  private UpdateViewPositionPacket createUpdateViewPosition(int posX, int posZ) {
-    return new UpdateViewPositionPacket(posX >> 4, posZ >> 4);
-  }
-
-  private ChunkDataPacket createChunkData(VirtualChunk chunk, Dimension dimension) {
-    return new ChunkDataPacket(chunk.getFullChunkSnapshot(), dimension.hasLegacySkyLight(), dimension.getMaxSections());
+  private static SetChunkCacheCenterPacket createSetChunkCacheCenter(int posX, int posZ) {
+    return new SetChunkCacheCenterPacket(posX >> 4, posZ >> 4);
   }
 
   public Integer getReadTimeout() {
@@ -1249,32 +1167,19 @@ public class LimboImpl implements Limbo {
 
   static {
     try {
-      PARTIAL_HASHED_SEED_FIELD = MethodHandles.privateLookupIn(JoinGamePacket.class, MethodHandles.lookup())
-          .findSetter(JoinGamePacket.class, "partialHashedSeed", long.class);
-      CURRENT_DIMENSION_DATA_FIELD = MethodHandles.privateLookupIn(JoinGamePacket.class, MethodHandles.lookup())
-          .findSetter(JoinGamePacket.class, "currentDimensionData", CompoundBinaryTag.class);
-      ROOT_NODE_FIELD = MethodHandles.privateLookupIn(AvailableCommandsPacket.class, MethodHandles.lookup())
-          .findSetter(AvailableCommandsPacket.class, "rootNode", RootCommandNode.class);
-      GRACEFUL_DISCONNECT_FIELD = MethodHandles.privateLookupIn(VelocityServerConnection.class, MethodHandles.lookup())
-          .findSetter(VelocityServerConnection.class, "gracefulDisconnect", boolean.class);
-      REGISTRY_FIELD = MethodHandles.privateLookupIn(JoinGamePacket.class, MethodHandles.lookup())
-          .findSetter(JoinGamePacket.class, "registry", CompoundBinaryTag.class);
-      LEVEL_NAMES_FIELDS = MethodHandles.privateLookupIn(JoinGamePacket.class, MethodHandles.lookup())
-          .findSetter(JoinGamePacket.class, "levelNames", ImmutableSet.class);
-      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mapping/chat_type_1_19.nbt")) {
-        CHAT_TYPE_119 = BinaryTagIO.unlimitedReader().read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
+      BinaryTagIO.Reader reader = BinaryTagIO.unlimitedReader();
+      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mappings/chat_type_1_19.nbt")) {
+        CHAT_TYPE_119 = reader.read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
       }
-      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mapping/chat_type_1_19_1.nbt")) {
-        CHAT_TYPE_1191 = BinaryTagIO.unlimitedReader().read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
+      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mappings/chat_type_1_19_1.nbt")) {
+        CHAT_TYPE_1191 = reader.read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
       }
-      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mapping/damage_type_1_19_4.nbt")) {
-        DAMAGE_TYPE_1194 = BinaryTagIO.unlimitedReader().read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
+      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mappings/damage_type_1_19_4.nbt")) {
+        DAMAGE_TYPE_1194 = reader.read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
       }
-      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mapping/damage_type_1_20.nbt")) {
-        DAMAGE_TYPE_120 = BinaryTagIO.unlimitedReader().read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
+      try (InputStream stream = LimboAPI.class.getResourceAsStream("/mappings/damage_type_1_20.nbt")) {
+        DAMAGE_TYPE_120 = reader.read(Objects.requireNonNull(stream), BinaryTagIO.Compression.GZIP);
       }
-    } catch (NoSuchFieldException | IllegalAccessException e) {
-      throw new ReflectionException(e);
     } catch (IOException e) {
       throw new IllegalStateException(e);
     }
